--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lodash": "^4.17.19",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "serialize-javascript": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
