--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "immer": "^8.0.1",
     "lodash": "^4.17.19",
-    "node-forge": "^0.10.0",
+    "node-notifier": "^9.0.0",
+    "object-path": "^0.11.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0",
