--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "immer": "^8.0.1",
     "lodash": "^4.17.19",
+    "node-forge": "^0.10.0",
     "node-notifier": "^9.0.0",
     "object-path": "^0.11.5",
     "react": "^16.12.0",
