--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
-    "serialize-javascript": "^5.0.1"
+    "serialize-javascript": "^5.0.1",
+    "y18n": "^6.0.0-alpha.0"
   },
   "scripts": {
     "start": "react-scripts start",
