--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "serialize-javascript": "^5.0.1",
+    "set-value": "^4.1.0",
     "y18n": "^6.0.0-alpha.0"
   },
   "scripts": {
